# g3l

./: CMakeLists.txt
kortex_api/: CMakeLists.txt
py/: parse_urdf.py
resources/: gen3_lite.urdf
src/: CMakeLists.txt  g3l.cpp  g3l.h  main.cpp  test_urdf.cpp  utilities.cpp  utilities.h
